# budget-rocket-rust

./: Cargo.toml
src/: main.rs
src/database/: setup.rs
src/routes/: auth.rs
