[package]
name = "budget-rocket-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
rocket = { version = "=0.5.0-rc.3", features = ["secrets","json"] }
sea-orm = {version = "0.11.3", features = ["sqlx-postgres","runtime-tokio-rustls"]}
sea-orm-rocket = "0.5.2"
serde = "1.0.164"
serde_json = "1.0.97"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]
